# black-friday-RCade

./: .gitignore  Cargo.toml  Trunk.toml  index.html  rcade.manifest.json
.github/workflows/: deploy.yaml
src/: lib.rs
